# kalman-cpp

./: .travis.yml  CMakeLists.txt  CONTRIBUTORS  example.cpp  kalman-test.cpp  kalman.cpp  kalman.hpp
data/: Artificial Data.xlsx  Data from nbn.xlsx  Graphs.xlsx
